// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageAtom should render the default image when no image prop is provided 1`] = `
<Image
  resizeMode="contain"
  source="mocked-logo.png"
  style={
    {
      "height": 100,
      "padding": 6,
      "width": 100,
    }
  }
/>
`;

exports[`ImageAtom should render the image prop correctly 1`] = `
<Image
  resizeMode="contain"
  source={
    {
      "uri": "https://example.com/image.jpg",
    }
  }
  style={
    {
      "height": 100,
      "padding": 6,
      "width": 100,
    }
  }
/>
`;

exports[`ImageAtom should render the image with custom width and height when width and height props are provided 1`] = `
<Image
  resizeMode="contain"
  source={
    {
      "uri": "https://example.com/image.jpg",
    }
  }
  style={
    {
      "height": 200,
      "padding": 6,
      "width": 300,
    }
  }
/>
`;
